<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- SearchView -->
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <!-- Carrito -->
    <item
        android:id="@+id/action_cart"
        android:title="@string/action_cart"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="ifRoom" />

    <!-- Actualizar -->
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="never" />

</menu>

